--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
   </head>
   <body>
+    <!-- JS Initial Block -->
     <!-- Bootstrap -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -40,5 +41,6 @@
     <!-- Hang Mania -->
     <script src="./assets/js/game.js"></script>
     <!-- /Hang Mania -->
+    <!-- JS Body Block -->
   </body>
 </html>
