Defined Logic in JS and Renamed Game

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- /Bootstrap -->
-    <!-- Hang Mania -->
+    <!-- Periodic Mania -->
     <script src="./assets/js/game.js"></script>
-    <!-- /Hang Mania -->
-    <!-- JS Body Block -->
+    <!-- /Periodic Mania -->
   </body>
 </html>
