--- a/index.html
+++ b/index.html
@@ -20,6 +20,35 @@
     />
   </head>
   <body>
+    <div class="container">
+      <!-- Nav -->
+      <div class="row">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">Filbert Shi</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link active" href="./index.html"
+                >Periodic Mania <span class="sr-only">(current)</span></a
+              >
+              <a class="nav-item nav-link" href="#">Filbert.me</a>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <!-- /Nav -->
+      <div class="row"></div>
+    </div>
     <!-- JS Initial Block -->
     <!-- jQuery -->
     <script
