--- a/index.html
+++ b/index.html
@@ -20,34 +20,50 @@
     />
   </head>
   <body>
-    <div class="container">
-      <!-- Nav -->
-      <div class="row">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Filbert Shi</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
+    <!-- Nav -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Filbert Shi</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="./index.html"
+            >Periodic Mania <span class="sr-only">(current)</span></a
           >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link active" href="./index.html"
-                >Periodic Mania <span class="sr-only">(current)</span></a
-              >
-              <a class="nav-item nav-link" href="#">Filbert.me</a>
-            </div>
-          </div>
-        </nav>
+          <a class="nav-item nav-link" href="#">Filbert.me</a>
+        </div>
       </div>
-      <!-- /Nav -->
-      <div class="row"></div>
+    </nav>
+    <!-- /Nav -->
+    <div class="container">
+      <!-- Alert Card -->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading">Periodic Mania | by Filbert Shi</h4>
+            <p>
+              Aww yeah, you successfully read this important alert message. This
+              example text is going to run a bit longer so that you can see how
+              spacing within an alert works with this kind of content.
+            </p>
+            <hr />
+            <p class="mb-0" id="introText">
+              Instructions
+            </p>
+            <hr />
+          </div>
+        </div>
+      </div>
+      <!-- /Alert Card -->
     </div>
     <!-- JS Initial Block -->
     <!-- jQuery -->
