--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
         <div class="col-lg-4">
           <div class="card alert-dark" style="width: 24rem;">
             <ul class="list-group list-group-flush">
+              <li class="list-group-item">Info</li>
+              <li class="list-group-item">Round:</li>
               <li class="list-group-item">Wins:</li>
               <li class="list-group-item">Losses:</li>
               <li class="list-group-item">Lives:</li>
