Linked Style.css

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
       rel="stylesheet"
     />
     <!-- /Google Font -->
+    <!-- style.css -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- /style.css -->
   </head>
   <body>
     <!-- Nav -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Filbert Shi</a>
+      <a class="navbar-brand" href="#">Filbert.me</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -49,7 +52,7 @@
           <a class="nav-item nav-link active" href="./index.html"
             >Periodic Mania <span class="sr-only">(current)</span></a
           >
-          <a class="nav-item nav-link" href="#">Filbert.me</a>
+          <a class="nav-item nav-link" href="#">Home</a>
         </div>
       </div>
     </nav>
@@ -81,7 +84,7 @@
         <div class="col-lg-4">
           <div class="card alert-dark" style="width: 24rem;">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Info</li>
+              <li class="list-group-item introMono">Info</li>
               <li class="list-group-item">Round:</li>
               <li class="list-group-item">Wins:</li>
               <li class="list-group-item">Losses:</li>
